src/objects/scZimmic__AccesToken__c.object
<CustomObject>
    <fields>
        <fullName>scZimmic__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccesTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scZimmic__saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scZimmic__screen_name__c</fullName>
        <label>screen_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scZimmic__secret__c</fullName>
        <label>secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scZimmic__service_name__c</fullName>
        <label>service_name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccessToken</label>
    <nameField>
        <label>AccesToken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccessTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>